fixed letter spacing in testimonials

--- a/src/front/styles/Testimonials.css
+++ b/src/front/styles/Testimonials.css
@@ -3,7 +3,7 @@
 }
 
 .cust-container {
-  border: 1px solid rgb(102, 102, 102);
+  border: 0.5px solid rgb(102, 102, 102);
   background-color: #fff;
   border-radius: 5px;
   padding: 16px;
@@ -15,10 +15,10 @@
 }
 #ds {
   font-family: "Libre Baskerville", serif;
-  letter-spacing: 2px;
+  letter-spacing: 0.5px;
 }
 #par {
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   font-family: "Lato";
 }
 
